# pv

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CRATES_IO_SETUP.md  Cargo.toml  LICENSE  README.md  com.github.SeanTater.pv.appdata.xml  com.github.SeanTater.pv.desktop  com.github.SeanTater.pv.yml  generated-sources.json
.flatpak-builder/checksums/: x86_64-com.github.SeanTater.pv.yml
.flatpak-builder/downloads/06abde3611657adf66d383f00b093d7faecc7fa57071cce2578660c9f1010821/: utf8parse-0.2.2.crate
.flatpak-builder/downloads/09ac3b126d3914f9849036f826e054cbabdc8519970b8998ddaf3b5bd3c65f11/: wait-timeout-0.2.1.crate
.flatpak-builder/downloads/11181fbabf243db407ef8df94a6ce0b2f9a733bd8be4ad02b4eda9602296cac8/: rustix-1.0.8.crate
.flatpak-builder/downloads/2bd389a4b2970a01282ee455294913c0a43724daedcd1a24c3eb0ec1c1320b66/: assert_cmd-2.0.17.crate
.flatpak-builder/downloads/2e09ced7ebbccb63b4c65413d821f2e00ce54c5ca4514ddc6b3c892fdbcbc69d/: console-0.16.0.crate
.flatpak-builder/downloads/301af1932e46185686725e0fad2f8f2aa7da69dd70bf6ecc44d6b703844a3933/: anstream-0.6.19.crate
.flatpak-builder/downloads/323402cff2dd658f39ca17c789b502021b3f18707c91cdf22e3838e1b4023817/: unit-prefix-0.5.1.crate
.flatpak-builder/downloads/34aa73646ffb006b8f5147f3dc182bd4bcb190227ce861fc4a4844bf8e3cb2c0/: encode_unicode-1.0.0.crate
.flatpak-builder/git/https_github.com_SeanTater_pv.git/: FETCH_HEAD  (+2 more)
.github/workflows/: ci.yml  dependabot-auto-merge.yml  flatpak.yml  release.yml
benchmarks/: README.md  run_benchmarks.sh  sample_results.md
src/: main.rs
tests/: edge_cases.rs  format_tests.rs  integration_tests.rs  numeric_tests.rs  output_redirection_tests.rs  rate_limiting_tests.rs  si_units_and_bits_tests.rs  stop_wait_delay_tests.rs
(+27 files in other folders)
