[package]
name = "pv"
version = "0.3.0"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
edition = "2018"
description = "Rust reimplementation of the unix pipeview (pv) utility"
license = "MIT"
documentation = "https://docs.rs/pv"
homepage = "https://github.com/SeanTater/pv"
repository = "https://github.com/SeanTater/pv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = [ "derive" ] }
indicatif = "^0.18"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
